# ollama-agent

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  ollama_cli.py  pyproject.toml  test.sh
.github/: pull_request_template.md
.github/workflows/: release.yml
demo/: README.md  help_system_demo.py  interactive_demo.sh
ollama_cli/: __init__.py
ollama_cli/ai/: __init__.py  client.py  prompt_manager.py  response_processor.py
ollama_cli/code_analysis/: __init__.py  function_finder.py  import_finder.py  searcher.py  todo_finder.py
ollama_cli/commands/: __init__.py  executor.py
ollama_cli/core/: __init__.py  cli.py  help.py  input_handler.py
ollama_cli/file_ops/: __init__.py  navigator.py  reader.py  writer.py
tests/: test_client.py  test_help.py  test_navigator.py  test_ollama_cli.py  test_response_processor.py
