[project]
name = "ollama-agent"
version = "0.1.0"
description = "An intelligent agent CLI for Ollama with natural language command execution"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Prodigi Software", email = "info@prodigisoftware.com"},
]
maintainers = [
    {name = "Prodigi Software", email = "info@prodigisoftware.com"},
]
keywords = ["ollama", "ai", "cli", "agent", "natural-language", "command-line"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.5",
]

[project.urls]
"Homepage" = "https://github.com/prodigisoftwares/ollama-agent"
"Repository" = "https://github.com/prodigisoftwares/ollama-agent"
"Bug Tracker" = "https://github.com/prodigisoftwares/ollama-agent/issues"
"Documentation" = "https://github.com/prodigisoftwares/ollama-agent#readme"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pip-audit>=2.6.0",
]

[project.scripts]
ollama-agent = "ollama_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ollama_cli"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.coverage.run]
source = ["ollama_cli"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "build>=1.3.0",
    "coverage>=7.10.7",
    "flake8>=7.3.0",
    "hatchling>=1.27.0",
    "isort>=6.0.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "twine>=6.2.0",
]
